# Machina-Polis

./: README.md
backend/: Cargo.toml
backend/src/: engine.rs  main.rs  models.rs  state.rs  ws.rs
frontend/: README.md  package-lock.json  package.json
frontend/src/: app.css  app.html
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/config/: +page.svelte
frontend/src/routes/history/: +page.svelte
frontend/src/routes/login/: +page.svelte
frontend/src/routes/stream/[id]/: +page.svelte
